Fix letter-spacing in nav links

--- a/css/App.scss
+++ b/css/App.scss
@@ -48,6 +48,7 @@ a {
   font-family: $font-family-sans-serif-nav;
   color: $color-silver-chalice;
   font-weight: 300;
+  letter-spacing: 1px;
   transition: .3s all;
 
   &:hover {
